# FileChangeObserver

./: CMakeLists.txt  README.md  main.cpp
include/: FileChangeObserver.h
src/: FileChangeObserver.cpp  main.cpp
